# ZOS

./: CMakeLists.txt  FileSystem.h  LibraryMethods.cpp  LibraryMethods.h  addDirItemToInode.cpp  bitmapOperations.cpp  cat.cpp  cd.cpp  cli.cpp  copyFile.cpp  createDirectoryItem.cpp  createFileOrDir.cpp  createInode.cpp  findDirItemInInode.cpp  fs.cpp  fsIO.cpp  fsInit.cpp  getAbsolutePathToInode.cpp  getFreeBlock.cpp  getFreeInode.cpp  getInodeAddressForPath.cpp  info.cpp  list.cpp  ln.cpp  moveFile.cpp  outcp.cpp  removeDirItemFromInode.cpp  removeDirectory.cpp  removeFile.cpp  serializing.cpp
